WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72789
[GTK] GTK+ 3 theming code does not use the GtkOrientable style class
https://bugs.webkit.org/show_bug.cgi?id=72789
Summary
[GTK] GTK+ 3 theming code does not use the GtkOrientable style class
Martin Robinson
Reported
2011-11-19 00:07:00 PST
This causes horizontal sliders to render incorrectly when painting with the unico theme.
Attachments
Patch
(7.16 KB, patch)
2011-11-19 00:10 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Fix for vertical slider thumbs
(7.23 KB, patch)
2011-11-19 10:14 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-11-19 00:10:48 PST
Created
attachment 115936
[details]
Patch
Martin Robinson
Comment 2
2011-11-19 10:14:39 PST
Created
attachment 115953
[details]
Fix for vertical slider thumbs
Carlos Garcia Campos
Comment 3
2011-11-21 00:02:40 PST
Comment on
attachment 115953
[details]
Fix for vertical slider thumbs I had in mind to review all the theming code, but never found the time. Patch looks good to me. Thanks!
Philippe Normand
Comment 4
2012-01-03 09:31:50 PST
Comment on
attachment 115953
[details]
Fix for vertical slider thumbs Great, thanks!
WebKit Review Bot
Comment 5
2012-01-03 11:52:03 PST
Comment on
attachment 115953
[details]
Fix for vertical slider thumbs Clearing flags on attachment: 115953 Committed
r103951
: <
http://trac.webkit.org/changeset/103951
>
WebKit Review Bot
Comment 6
2012-01-03 11:52:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug