[GTK] GTK+ 3 theming code does not use the GtkOrientable style class https://bugs.webkit.org/show_bug.cgi?id=72789

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-01-03
Reviewed by Philippe Normand.

No new tests. Testing GTK+ theming is quite difficult
because no two distributions have the same set of themes.
Current tests prevent regressions.

* platform/gtk/RenderThemeGtk3.cpp:
(WebCore::applySliderStyleContextClasses): Added this helper that
properly handles the orientable style class.
(WebCore::RenderThemeGtk::paintSliderTrack): Use the new helper.
(WebCore::RenderThemeGtk::paintSliderThumb): Ditto.
* platform/gtk/ScrollbarThemeGtk3.cpp:
(WebCore::applyScrollbarStyleContextClasses): Added this helper that
properly handles the orientable style class.
(WebCore::ScrollbarThemeGtk::paintTrackBackground): Use the new helper.
(WebCore::ScrollbarThemeGtk::paintScrollbarBackground): Ditto.
(WebCore::ScrollbarThemeGtk::paintThumb): Ditto.
(WebCore::ScrollbarThemeGtk::paintButton): Ditto.

Canonical link: https://commits.webkit.org/92248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103951 268f45cc-cd09-0410-ab3c-d52691b4dbfc