Source/WebCore/platform/gtk/ScrollbarThemeGtk3.cpp
@@ -64,6 +64,12 @@ void ScrollbarThemeGtk::updateThemeProperties()
     updateScrollbarsFrameThickness();
 }
 
+static void applyScrollbarStyleContextClasses(GtkStyleContext* context, ScrollbarOrientation orientation)
+{
+    gtk_style_context_add_class(context, GTK_STYLE_CLASS_SCROLLBAR);
+    gtk_style_context_add_class(context, orientation == VerticalScrollbar ?  GTK_STYLE_CLASS_VERTICAL : GTK_STYLE_CLASS_HORIZONTAL);
+}
+
 void ScrollbarThemeGtk::paintTrackBackground(GraphicsContext* context, Scrollbar* scrollbar, const IntRect& rect)
 {
     // Paint the track background. If the trough-under-steppers property is true, this
@@ -75,7 +81,7 @@ void ScrollbarThemeGtk::paintTrackBackground(GraphicsContext* context, Scrollbar
 
     gtk_style_context_save(m_context);
 
-    gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_SCROLLBAR);
+    applyScrollbarStyleContextClasses(m_context, scrollbar->orientation());
     gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_TROUGH);
 
     gtk_render_background(m_context, context->platformContext()->cr(),
@@ -90,7 +96,7 @@ void ScrollbarThemeGtk::paintScrollbarBackground(GraphicsContext* context, Scrol
 {
     gtk_style_context_save(m_context);
 
-    gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_SCROLLBAR);
+    applyScrollbarStyleContextClasses(m_context, scrollbar->orientation());
     gtk_style_context_add_class(m_context, "scrolled-window");
     gtk_render_frame(m_context, context->platformContext()->cr(), scrollbar->x(), scrollbar->y(), scrollbar->width(), scrollbar->height());
 
@@ -101,7 +107,8 @@ void ScrollbarThemeGtk::paintThumb(GraphicsContext* context, Scrollbar* scrollba
 {
     gtk_style_context_save(m_context);
 
-    gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_SCROLLBAR);
+    ScrollbarOrientation orientation = scrollbar->orientation();
+    applyScrollbarStyleContextClasses(m_context, orientation);
     gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_SLIDER);
 
     guint flags = 0;
@@ -112,7 +119,7 @@ void ScrollbarThemeGtk::paintThumb(GraphicsContext* context, Scrollbar* scrollba
     gtk_style_context_set_state(m_context, static_cast<GtkStateFlags>(flags));
 
     gtk_render_slider(m_context, context->platformContext()->cr(), rect.x(), rect.y(), rect.width(), rect.height(),
-                      scrollbar->orientation() == VerticalScrollbar ? GTK_ORIENTATION_VERTICAL : GTK_ORIENTATION_HORIZONTAL);
+                      orientation == VerticalScrollbar ? GTK_ORIENTATION_VERTICAL : GTK_ORIENTATION_HORIZONTAL);
 
     gtk_style_context_restore(m_context);
 }
@@ -121,7 +128,8 @@ void ScrollbarThemeGtk::paintButton(GraphicsContext* context, Scrollbar* scrollb
 {
     gtk_style_context_save(m_context);
 
-    gtk_style_context_add_class(m_context, GTK_STYLE_CLASS_SCROLLBAR);
+    ScrollbarOrientation orientation = scrollbar->orientation();
+    applyScrollbarStyleContextClasses(m_context, orientation);
 
     guint flags = 0;
     if ((BackButtonStartPart == part && scrollbar->currentPos())
@@ -157,7 +165,7 @@ void ScrollbarThemeGtk::paintButton(GraphicsContext* context, Scrollbar* scrollb
     }
 
     gdouble angle;
-    if (scrollbar->orientation() == VerticalScrollbar) {
+    if (orientation == VerticalScrollbar) {
         angle = (part == ForwardButtonEndPart || part == ForwardButtonStartPart) ? G_PI : 0;
     } else {
         angle = (part == ForwardButtonEndPart || part == ForwardButtonStartPart) ? G_PI / 2 : 3 * (G_PI / 2);
